--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@
 }
 
 .rock:before {
-  content: "";
+  content: '';
   border-bottom: 6px solid tan;
   border-left: 6px solid #111;
   border-right: 6px solid #111;
@@ -43,7 +43,7 @@
 }
 
 .rock:after {
-  content: "";
+  content: '';
   border-left: 6px solid #111;
   border-right: 6px solid #111;
   border-top: 6px solid tan;
